--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </a>
                     <nav role="navigation" class="nav-menu w-nav-menu">
                         <a href="/" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
-                        <a href="episode.html" class="nav-link w-nav-link">Episodes</a>
+                        <a href="#interview-section" class="nav-link w-nav-link">Episodes</a>
                         <div
                             data-hover="true"
                             data-delay="0"
@@ -89,7 +89,7 @@
                                 <div>Pages</div>
                                 <div class="dropdown-image w-icon-dropdown-toggle"></div>
                             </div>
-                            <nav class="dropdown-list w-dropdown-list">
+                            <nav class="dropdown-list w-dropdown-list" style="width: 220%;">
                                 <a href="https://ppgsiitkgp.in/" target="_blank" aria-current="page" class="dropdown-link w-dropdown-link w--current">Home</a>
                                 <a href="https://ppgsiitkgp.in/upsc" target="_blank" class="dropdown-link w-dropdown-link">UPSC CSE</a>
                                 <a href="https://ppgsiitkgp.in/mentorship" target="_blank" class="dropdown-link w-dropdown-link">Mentorship Program</a>
@@ -169,7 +169,7 @@
                             </div> -->
                         </div>
                         <div id="w-node-_43373c9b-04e4-1b72-89b5-1b20d3fca8ba-f6644bbc" class="hero-image-right-wrap">
-                            <img
+                            <!-- <img
                                 src="assets/6597a449f62eaac7dd1fe149_hero-image-01.png"
                                 loading="eager"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 94vw, (max-width: 1279px) 40vw, (max-width: 1439px) 45vw, 51vw"
@@ -189,8 +189,8 @@
                                 data-w-id="2f82c258-9658-3ca1-08e8-929ca7f12b13"
                                 alt=""
                                 class="hero-image-left-sm"
-                            >
-                            <a href="/episode" data-w-id="f20ea2bc-8f60-9b58-5698-15e0db3bf019" class="hero-button-link w-inline-block">
+                            > -->
+                            <a href="#interview-section" data-w-id="f20ea2bc-8f60-9b58-5698-15e0db3bf019" class="hero-button-link w-inline-block">
                                 <img
                                     src="assets/65a616a7620ad69a34f93598_button-text-02.png"
                                     loading="eager"
@@ -749,10 +749,9 @@
                 <div class="w-layout-grid grid-about-split">
                     <div id="w-node-_2b94a759-6712-afb1-51af-751c2adc2395-f6644bbc" class="about-image-wrap">
                         <img
-                            src="imgs/Diplomacy_img.avif"
+                            src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/6597e322cf0fe0dcaebe29ac_about-image-01.png"
                             loading="eager"
                             sizes="(max-width: 767px) 92vw, (max-width: 1279px) 94vw, 999.9999389648438px"
-                            srcset="imgs/Diplomacy_img.avif 1000w 500w, imgs/Diplomacy_img.avif 1000w"
                             alt="About image 01"
                             class="image-image-left"
                         >
@@ -928,7 +927,7 @@
                 <div class="grid-guest-split">
                     <div id="w-node-_0f718aac-0f28-6d0b-d9d9-82469970f8c4-f6644bbc">
                         <h2>Meet our guest</h2>
-                        <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta.</p>
+                        <p>Engaging discussions with Consuls on global policies in Diplomatic Disclosure Series.</p>
                     </div>
                     <div id="w-node-d19d839f-155b-4ab3-3fe9-f706600d02d5-f6644bbc">
                         <div
